--- a/api/demo/requirements.txt
+++ b/api/demo/requirements.txt
@@ -8,7 +8,7 @@ backtrader==1.9.76.123
 beautifulsoup4==4.10.0
 bidict==0.22.1
 bleach==4.1.0
-certifi==2023.5.7
+certifi>=2023.7.22
 charset-normalizer==3.1.0
 debugpy==1.5.1
 defusedxml==0.7.1
