--- a/api/demo/requirements.txt
+++ b/api/demo/requirements.txt
@@ -1,73 +1,4 @@
-akshare==1.2.3
-anyio==3.3.4
-appnope==0.1.2
-argon2-cffi==21.1.0
-attrs==21.2.0
-backcall==0.2.0
-backtrader==1.9.76.123
-beautifulsoup4==4.10.0
-bidict==0.22.1
-bleach==4.1.0
-certifi>=2023.7.22
-charset-normalizer==3.1.0
-debugpy==1.5.1
-defusedxml==0.7.1
-entrypoints==0.3
-et-xmlfile==1.1.0
-html5lib==1.1
-idna==3.4
-ipykernel==6.4.2
-ipython==7.28.0
-ipython-genutils==0.2.0
-ipywidgets==7.6.5
-jedi==0.18.0
-json5==0.9.6
-jsonpath==0.82
-jsonschema==4.1.2
-jupyter==1.0.0
-jupyter-client==7.0.6
-jupyter-console==6.4.0
-jupyter-core==4.9.1
-jupyter-server==1.11.1
-jupyterlab==3.2.1
-jupyterlab-pygments==0.1.2
-jupyterlab-server==2.8.2
-jupyterlab-widgets==1.0.2
-matplotlib-inline==0.1.3
-mistune==0.8.4
-nbclassic==0.3.4
-nbclient==0.5.4
-nbconvert==6.2.0
-nbformat==5.1.3
-nest-asyncio==1.5.1
-netifaces==0.10.6
-notebook==6.4.5
-pandocfilters==1.5.0
-parso==0.8.2
-pexpect==4.8.0
-pickleshare==0.7.5
-ptyprocess==0.7.0
-py-mini-racer==0.6.0
-pyrsistent==0.18.0
-python-engineio==4.4.1
-python-socketio==5.8.0
-pyzmq==22.3.0
-qtconsole==5.1.1
-requests==2.31.0
-requests-unixsocket==0.2.0
-Send2Trash==1.8.0
-sniffio==1.2.0
-socketio==0.2.1
-tabulate==0.8.9
-terminado==0.12.1
-testpath==0.5.0
-tornado==6.1
-traitlets==5.1.1
-urllib3==2.0.3
-wcwidth==0.2.5
-webencodings==0.5.1
-websocket-client==1.2.1
-widgetsnbextension==3.5.2
-soundfile==0.12.1
-numpy==1.26.4
 mido
+requests
+numpy
+soundfile
